--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,7 @@
   --danger: #dc3545;
   --light: #ffffff;
   --dark: #343a40;
+  --FINAL1: #343a40;
   --breakpoint-xs: 0;
   --breakpoint-sm: 576px;
   --breakpoint-md: 768px;
@@ -152,7 +153,7 @@ sup {
 }
 
 a {
-  color: #3498DB;
+  color: #343a40;
   text-decoration: none;
   background-color: transparent;
 }
@@ -2371,8 +2372,8 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #3498DB;
-  border-color: #3498DB;
+  background-color: #343a40;
+  border-color: #343a40;
 }
 
 .btn-primary:hover {
@@ -2390,8 +2391,8 @@ fieldset:disabled a.btn {
 
 .btn-primary.disabled, .btn-primary:disabled {
   color: #fff;
-  background-color: #3498DB;
-  border-color: #3498DB;
+  background-color: #343a40;
+  border-color: #343a40;
 }
 
 .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active,
@@ -2666,14 +2667,14 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-primary {
-  color: #3498DB;
-  border-color: #3498DB;
+  color: #343a40;
+  border-color: #343a40;
 }
 
 .btn-outline-primary:hover {
   color: #fff;
-  background-color: #3498DB;
-  border-color: #3498DB;
+  background-color: #343a40;
+  border-color: #343a40;
 }
 
 .btn-outline-primary:focus, .btn-outline-primary.focus {
@@ -2681,15 +2682,15 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-primary.disabled, .btn-outline-primary:disabled {
-  color: #3498DB;
+  color: #343a40;
   background-color: transparent;
 }
 
 .btn-outline-primary:not(:disabled):not(.disabled):active, .btn-outline-primary:not(:disabled):not(.disabled).active,
 .show > .btn-outline-primary.dropdown-toggle {
   color: #fff;
-  background-color: #3498DB;
-  border-color: #3498DB;
+  background-color: #343a40;
+  border-color: #343a40;
 }
 
 .btn-outline-primary:not(:disabled):not(.disabled):active:focus, .btn-outline-primary:not(:disabled):not(.disabled).active:focus,
@@ -2923,7 +2924,7 @@ fieldset:disabled a.btn {
 
 .btn-link {
   font-weight: 400;
-  color: #3498DB;
+  color: #343a40;
   text-decoration: none;
 }
 
@@ -3221,7 +3222,7 @@ input[type="button"].btn-block {
 .dropdown-item.active, .dropdown-item:active {
   color: #fff;
   text-decoration: none;
-  background-color: #3498DB;
+  background-color: #343a40;
 }
 
 .dropdown-item.disabled, .dropdown-item:disabled {
@@ -3580,8 +3581,8 @@ input[type="button"].btn-block {
 
 .custom-control-input:checked ~ .custom-control-label::before {
   color: #fff;
-  border-color: #3498DB;
-  background-color: #3498DB;
+  border-color: #343a40;
+  background-color: #343a40;
 }
 
 .custom-control-input:focus ~ .custom-control-label::before {
@@ -3645,8 +3646,8 @@ input[type="button"].btn-block {
 }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::before {
-  border-color: #3498DB;
-  background-color: #3498DB;
+  border-color: #343a40;
+  background-color: #343a40;
 }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::after {
@@ -3872,7 +3873,7 @@ input[type="button"].btn-block {
   width: 1rem;
   height: 1rem;
   margin-top: -0.25rem;
-  background-color: #3498DB;
+  background-color: #343a40;
   border: 0;
   border-radius: 1rem;
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3902,7 +3903,7 @@ input[type="button"].btn-block {
 .custom-range::-moz-range-thumb {
   width: 1rem;
   height: 1rem;
-  background-color: #3498DB;
+  background-color: #343a40;
   border: 0;
   border-radius: 1rem;
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3935,7 +3936,7 @@ input[type="button"].btn-block {
   margin-top: 0;
   margin-right: 0.2rem;
   margin-left: 0.2rem;
-  background-color: #3498DB;
+  background-color: #343a40;
   border: 0;
   border-radius: 1rem;
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -4074,7 +4075,7 @@ input[type="button"].btn-block {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #3498DB;
+  background-color: #343a40;
 }
 
 .nav-fill > .nav-link,
@@ -4741,7 +4742,7 @@ input[type="button"].btn-block {
   padding: 0.5rem 0.75rem;
   margin-left: -1px;
   line-height: 1.25;
-  color: #3498DB;
+  color: #343a40;
   background-color: #fff;
   border: 1px solid #dee2e6;
 }
@@ -4774,8 +4775,8 @@ input[type="button"].btn-block {
 .page-item.active .page-link {
   z-index: 3;
   color: #fff;
-  background-color: #3498DB;
-  border-color: #3498DB;
+  background-color: #343a40;
+  border-color: #343a40;
 }
 
 .page-item.disabled .page-link {
@@ -4858,7 +4859,7 @@ a.badge:hover, a.badge:focus {
 
 .badge-primary {
   color: #fff;
-  background-color: #3498DB;
+  background-color: #343a40;
 }
 
 a.badge-primary:hover, a.badge-primary:focus {
@@ -5163,7 +5164,7 @@ a.badge-dark:focus, a.badge-dark.focus {
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: #3498DB;
+  background-color: #343a40;
   transition: width 0.6s ease;
 }
 
@@ -5250,8 +5251,8 @@ a.badge-dark:focus, a.badge-dark.focus {
 .list-group-item.active {
   z-index: 2;
   color: #fff;
-  background-color: #3498DB;
-  border-color: #3498DB;
+  background-color: #343a40;
+  border-color: #343a40;
 }
 
 .list-group-item + .list-group-item {
@@ -6355,7 +6356,7 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #3498DB!important;
+  background-color: #343a40!important;
 }
 
 a.bg-primary:hover, a.bg-primary:focus,
@@ -6483,7 +6484,7 @@ button.bg-dark:focus {
 }
 
 .border-primary {
-  border-color: #3498DB!important;
+  border-color: #343a40!important;
 }
 
 .border-secondary {
@@ -9525,7 +9526,7 @@ button.bg-dark:focus {
 }
 
 .text-primary {
-  color: #3498DB!important;
+  color: #343a40!important;
 }
 
 a.text-primary:hover, a.text-primary:focus {
@@ -9803,7 +9804,7 @@ h6,
 
 .navbar-light .navbar-nav .nav-link:hover,
 .navbar-light .navbar-nav .nav-link.active {
-  color: #3498DB;
+  color: #343a40;
 }
 
 @media (max-width: 991.98px) {
@@ -9866,7 +9867,7 @@ h6,
   width: 0;
   height: 0;
   left: -1px;
-  border-left: 16px solid #3498DB;
+  border-left: 16px solid #343a40;
   border-top: 11px solid transparent;
   border-bottom: 11px solid transparent;
 }
@@ -9960,7 +9961,7 @@ h6,
 }
 
 .testimonial-carousel .owl-dot.active {
-  background: #3498DB;
+  background: #343a40;
 }
 
 .blog-date {
@@ -9974,7 +9975,7 @@ h6,
   top: calc(50% - 30px);
   left: calc(50% - 30px);
   border-radius: 60px;
-  background: #3498DB;
+  background: #343a40;
 }
 
 .contact-form .help-block ul {
