--- a/css/style.css
+++ b/css/style.css
@@ -262,6 +262,31 @@ select {
   word-wrap: normal;
 }
 
+.css-selector {
+  background: linear-gradient(226deg, #444444, #262626, #005546);
+  background-size: 600% 600%;
+
+  -webkit-animation: AnimationName 9s ease infinite;
+  -moz-animation: AnimationName 9s ease infinite;
+  animation: AnimationName 9s ease infinite;
+}
+
+@-webkit-keyframes AnimationName {
+  0%{background-position:50% 0%}
+  50%{background-position:51% 100%}
+  100%{background-position:50% 0%}
+}
+@-moz-keyframes AnimationName {
+  0%{background-position:50% 0%}
+  50%{background-position:51% 100%}
+  100%{background-position:50% 0%}
+}
+@keyframes AnimationName {
+  0%{background-position:50% 0%}
+  50%{background-position:51% 100%}
+  100%{background-position:50% 0%}
+}
+
 button,
 [type="button"],
 [type="reset"],
